# petra

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
benchmarks/: generate_benchmark.py  run_benchmarks.py  string_dispatch.cpp.empy
cmake/: dispatch_add_benchmark.cmake  dispatch_add_executable.cmake  dispatch_add_test.cmake  petra_add_benchmark.cmake  petra_add_executable.cmake  petra_add_test.cmake
examples/: CMakeLists.txt  callback_table.cpp  map.cpp  sequence_map.cpp  sequential_table.cpp  string_hash.cpp  switch_table.cpp
include/dispatch/: array_jump_table.hpp  callback_table.hpp  chd.hpp  concepts.hpp  int_hash.hpp  linear_hash.hpp  map.hpp  naive_string_hash.hpp  recursive_switch_table.hpp  sequential_table.hpp  simple_string_hash.hpp  string_dispatch.hpp  string_hash.hpp  string_literal.hpp  switch_macro.hpp  switch_table.hpp  unsequenced_jump_table.hpp  utilities.hpp
include/dispatch/detail/: array_jump_table.hpp  chd.hpp  index_map.hpp  string_hash.hpp  string_literal.hpp  switch_table.hpp
include/dispatch/utilities/: fold.hpp  sequence.hpp  tuple.hpp
include/petra/: base_table.hpp  callback_table.hpp  chd.hpp  concepts.hpp  enum_map.hpp  expected.hpp  indexed_bases.hpp  linear_hash.hpp  map.hpp  product_map.hpp  sequence_map.hpp  sequential_table.hpp  string_literal.hpp  string_map.hpp  switch_table.hpp  utilities.hpp
include/petra/detail/: chd.hpp  index_map.hpp  macros.hpp  string_literal.hpp  switch_table.hpp
include/petra/utilities/: fold.hpp  sequence.hpp  tuple.hpp
src/: callback_table.cpp  generic_jump_table.cpp  int_hash.cpp  macro_switch_table.cpp  map.cpp  recursive_switch_table.cpp  simple_string_hash.cpp  string_hash.cpp
test/: CMakeLists.txt  base_table.cpp  callback_table.cpp  chd.cpp  enum_map.cpp  exhaustive_string_hash.cpp  indexed_bases.cpp  linear_hash.cpp  map.cpp  naive_string_hash.cpp  recursive_switch_table.cpp  sequence_map.cpp  sequential_table.cpp  simple_string_hash.cpp  string_hash.cpp  string_hash_utilities.hpp  string_map.cpp  switch_table.cpp  unsequenced_jump_table.cpp  utilities.hpp
